--- a/index.html
+++ b/index.html
@@ -6,32 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
   </head>
   <body>
     <div class="calculator">
-      <div class="display"></div>
+      <div class="display">
+        <div class="upNumber"></div>
+        <div class="downNumber">0</div>
+      </div>
       <div class="buttons">
         <button>AC</button>
-        <button>+/-</button>
-        <button>%</button>
-        <button>÷</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>x</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>-</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>
-        <button>0</button>
-        <button>.</button>
+        <button class="changeSimbol">+/-</buttonclass=>
+        <button class="operator">%</button=>
+        <button class="operator">÷</button>
+        <button class="number">7</button>
+        <button class="number">8</button>
+        <button class="number">9</button>
+        <button class="operator">x</button>
+        <button class="number">4</button>
+        <button class="number">5</button>
+        <button class="number">6</button>
+        <button class="operator">-</button>
+        <button class="number">1</button>
+        <button class="number">2</button>
+        <button class="number">3</button>
+        <button class="operator">+</button>
+        <button class="number">0</button>
+        <button class="number">.</button>
         <button id="igual">=</button>
-      </div class="buttons">
+      </div>
     </div>
   </body>
 </html>
