--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="downNumber">0</div>
       </div>
       <div class="buttons">
-        <button>AC</button>
+        <button class="ac">AC</button>
         <button class="changeSimbol">+/-</buttonclass=>
         <button class="operator">%</button=>
         <button class="operator">÷</button>
